# psol-v2

./: .gitignore  AUDIT_REPORT_2026-01-09.md  Anchor.toml  CRYPTO_IMPLEMENTATION_SUMMARY.md  CRYPTO_LAYER_DELIVERABLES.md  CRYPTO_PRODUCTION_READINESS.md  CRYPTO_STATUS.md  Cargo.toml  DEVNET_CONFIG.md  PRE_PRODUCTION_CHECKLIST.md  README.md  README.md.old  README1.md  README_DEVNET_UPDATED.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_README.md  SECURITY_PATCH.md  SPRINT_PLAN.md  STATUS-POOL-V8.md  SnowDog_Awwwards_Polish_Brief.md  TODO.md  WALLETS.md  correct-encoding-test.js  debug-cu.js  deployment.md  deposit-lean.js  devnet-readiness-checklist.md  file-level-evidence.md  final-audit-report.md  final-eip197-fix.js  final-fix.js  fix-and-test.js  github-relayer-env-example  github-relayer-index.ts  init-new-pool.js  mandatory-checks-report.md  minimal-patch-plan.md  package-lock.json  package.json  pool-authority-2.json  (+15 more)
.devcontainer/: devcontainer.json  setup.sh
circuits/: build.sh  merkle_tree.circom  package-lock.json  package.json  test-hash.js  test-hash2.js  test-proof.js
keys/: generate-keys.sh
ops/: pool-authorities.md
programs/psol-privacy-v2/: Cargo.toml  build.rs
programs/psol-privacy-v2/src/: account_structs.rs  error.rs  events.rs  lib.rs  lib.rs.bak  lib_minimal.rs  types.rs
programs/psol-privacy-v2/src/crypto/: alt_bn128.rs  alt_bn128_syscalls.rs  curve_utils.rs  encoding.rs  field.rs  groth16.rs  groth16_verifier.rs  keccak.rs  mod.rs  poseidon.rs  poseidon_bn254_constants.in.rs  poseidon_constants.rs  poseidon_constants_t3.rs  poseidon_real.rs  precomputed_zeros.rs  public_inputs.rs  verification_keys.rs
programs/psol-privacy-v2/src/instructions/: batch_process_deposits.rs  deposit_masp.rs  deposit_masp.rs.backup  init_yield_registry.rs  initialize_pending_deposits_buffer.rs  initialize_pool_registries.rs  initialize_pool_registries_v2.rs  initialize_pool_v2.rs  manage_yield_mints.rs  mod.rs  private_transfer.rs  prove_membership.rs  register_asset.rs  set_feature_flags.rs  set_verification_key_chunked.rs  set_verification_key_v2.rs  settle_deposits_batch.rs  withdraw_masp.rs  withdraw_v2.rs  withdraw_yield_v2.rs
programs/psol-privacy-v2/src/instructions/admin/: authority_v2.rs  clear_pending.rs  configure_asset.rs  configure_denominations.rs  granular_pause.rs  mod.rs  pause_v2.rs  reset_merkle.rs  unpause_v2.rs
programs/psol-privacy-v2/src/instructions/compliance/: attach_metadata.rs  attach_metadata.rs.orig  attach_metadata.rs.rej  configure_compliance.rs  mod.rs
programs/psol-privacy-v2/src/instructions/relayer/: configure_registry.rs  deactivate_relayer.rs  mod.rs  register_relayer.rs  update_relayer.rs
programs/psol-privacy-v2/src/instructions/shielded_cpi/: execute_action.rs  mod.rs
programs/psol-privacy-v2/src/state/: asset_vault.rs  batcher_role.rs  compliance.rs  merkle_tree.rs  mod.rs  pending_deposits.rs  pool_config.rs  relayer.rs  spent_nullifier.rs  verification_key.rs  yield_registry.rs
programs/psol-privacy-v2/src/utils/: cu_debug.rs  mod.rs  validation.rs
programs/psol-privacy-v2/tests/: poseidon_vectors_test.rs
psol-v2-actually-corrected/: FIXES-APPLIED.md  README.md
psol-v2-actually-corrected/overlay/programs/psol-privacy-v2/: Cargo.toml
psol-v2-actually-corrected/overlay/programs/psol-privacy-v2/src/: error.rs  events.rs  lib.rs
psol-v2-actually-corrected/overlay/programs/psol-privacy-v2/src/crypto/: groth16.rs  keccak.rs  mod.rs  poseidon.rs
psol-v2-actually-corrected/overlay/programs/psol-privacy-v2/src/instructions/: batch_process_deposits.rs  deposit_masp.rs
relayer/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
scripts/: check-merkle.ts  check-state.ts  check-vks-finalized.ts  clear-pending.ts  compile-circuits.sh  debug-tree-state.ts  gen-poseidon-vectors.mjs  generate-poseidon-test-vectors.js  generate-poseidon-vectors.js  helius-historical-query.ts  indexer.ts  init-fresh-pool.ts  init-pending.ts  init-pool-fixed.ts  init-pool-minimal.ts  init-pool-production-raw.ts  init-pool-production.ts  init-pool-quick.ts  init-relayer-registry.ts  init-yield-registry.ts  parse-historical-buffer.ts  rebuild-commitments-from-events.ts  rebuild-tree-state.ts  register-assets.ts  register-relayer-e5jr.ts  register-relayer.ts  register-wsol.ts  reset-merkle.ts  sequencer-production.ts  sequencer.ts  setup-pool-registries.ts  setup-pool-v8-final.ts  setup-yield-enforcement.ts  sync-tree.ts  test-yield-enforcement.ts  trusted-setup.sh  unregister-asset.ts  upload-all-vks.ts  upload-deposit-vk.ts  upload-merkle-batch-vk.ts  (+3 more)
sdk/: CIRCUIT_CONFIGURATION.md  package-lock.json  package.json  tsconfig.json
streampump/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
tests/: create-test-deposit.ts  deposit-withdraw-integration.ts  e2e-deposit-withdraw.ts  encoding-verification.ts  execute-test-deposit.ts  extract-vectors-simple.js  (+12 more)
(+105 files in other folders)
