[package]
name = "psol-privacy-v2"
version = "2.0.0"
description = "Multi-Asset Shielded Pool (MASP) on Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "psol_privacy_v2"
doctest = false

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
devnet = []
mainnet = []
event-debug = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
poseidon-constants = []
insecure-dev = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
hex = "0.4"
ark-bn254 = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-ff = { version = "0.5.0", default-features = false }
solana-keccak-hasher = "2.2.1"

[build-dependencies]
# Build-time only: used to generate circom-compatible Poseidon round constants/MDS.
# IMPORTANT: This crate is not no_std-friendly; do not link it into the BPF program.
light-poseidon = "0.4.0"
ark-bn254 = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-ff = { version = "0.5.0", default-features = false }
