[package]
name = "psol-privacy-v2"
version = "2.0.0"
description = "Multi-Asset Shielded Pool (MASP) on Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "psol_privacy_v2"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# IMPORTANT:
# Default to constants-based Poseidon for BPF safety (avoids light-poseidon stack overflow).
default = ["poseidon-constants"]

devnet = []
mainnet = []
event-debug = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

# Poseidon implementations
poseidon-constants = []
poseidon-light = ["dep:light-poseidon"]

insecure-dev = []

# Feature expected by Anchor macros (silences cfg(feature="anchor-debug") warnings)
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

# If you are using keccak syscall via anchor_lang::solana_program, you do NOT need solana-program directly.
# If you are hashing in-program (not recommended), sha3 is fine.
sha3 = "0.10"

# Arkworks: BN254 field types (needed for constants-based Poseidon and Groth16 parsing helpers)
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"

hex = "0.4"

# OPTIONAL: light-poseidon is NOT BPF-safe due to stack usage in parameter generation.
# Keep it for host tests/dev tools only, behind feature `poseidon-light`.
light-poseidon = { version = "0.3.0", optional = true }
