[package]
name = "psol-privacy-v2"
version = "0.1.0"
description = "pSOL Privacy Protocol v2 - MASP on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psol_privacy_v2"

[features]
default = []

# ⚠️⚠️⚠️ INSECURE DEV MODE ⚠️⚠️⚠️
# Enables placeholder cryptography for LOCAL DEVELOPMENT ONLY
# DO NOT USE IN PRODUCTION OR WITH REAL FUNDS
# 
# This feature allows testing the protocol flow without implementing
# real Poseidon/BN254/Groth16 cryptography. It provides NO security.
#
# Usage: anchor build -- --features insecure-dev
insecure-dev = []

# Event debugging (leaks privacy-sensitive data - test only)
event-debug = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "2.1.0"

# For real keccak256 hashing
# Uses Solana's keccak syscall (production-ready)
# No additional dependencies needed - using solana-program keccak module

[dev-dependencies]
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
